# N-Body-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Discretizers.md  INSTALL.md  Index.md  Particle.md  README.md  System.md  Types.md
docs/report/: main.tex  references.bib
examples/: README.md
examples/example_1/: CMakeLists.txt  example_1.cpp
examples/example_2/: CMakeLists.txt  README.md  example_2.cpp
examples/example_3/: CMakeLists.txt  example_3.cpp
examples/example_4/: CMakeLists.txt  example_4.cpp
examples/example_5/: CMakeLists.txt  README.md  example_5.cpp
examples/example_6/: CMakeLists.txt  README.md  example_6.cpp
examples/example_7/: CMakeLists.txt  example_7.cpp
examples/example_BH/: CMakeLists.txt  example_BH.cpp  example_BHrand.cpp
examples/example_BH_2/: CMakeLists.txt  example_BH_2.cpp
examples/example_MPI/: CMakeLists.txt  Makefile  example_mpi.cpp  example_speedup_MPI.cpp
examples/example_OF/: CMakeLists.txt  Makefile  N-Body-simulator.qbs  README.md  addons.make  config.make  example_OF.cpp
examples/example_OF/src/: Parser.hpp  main.cpp  ofApp.cpp  ofApp.h
examples/example_collisions/: CMakeLists.txt  example_collisions.cpp
examples/example_discretizer/: CMakeLists.txt  example_discretizer.cpp
examples/example_galaxy/: CMakeLists.txt  example_galaxy.cpp  example_rotating_disk.cpp  example_star_cluster.cpp
examples/example_gnuplot/: CMakeLists.txt  example_gnu.cpp
examples/example_nbody/: CMakeLists.txt  example_nbody.cpp
examples/example_parallel/: CMakeLists.txt  example_parallel.cpp
examples/example_speedup/: CMakeLists.txt  example_BHspeedup.cpp  example_speedup.cpp
examples/example_threeBody/: CMakeLists.txt  example_SunEarthMoon.cpp  example_threeBody.cpp
graphics/: BHCompCheck.py  README.md  comparison.py  example_parser.py  parsing.py  plot_particles.gp  plot_singleposition.py  prova_out.txt  real_parser.py  test.part  testCollision.part  viewer.py
inc/: N-Body-sim.hpp
inc/Collisions/: Boundary.hpp  Collisions.hpp  CubeBoundary.hpp  README.md  SphereBoundary.hpp
inc/Exporter/: Exporter.hpp
inc/Functions/: EulerDiscretizer.hpp  Functions.hpp  RKDiscretizer.hpp  RKFDiscretizer.hpp  VerletDiscretizer.hpp
inc/ParallelSystem/: ParallelSystem.hpp
inc/Particle/: Particle.hpp  ParticleVerlet.hpp
inc/Simulator/: Simulator.hpp
inc/System/: System.hpp
inc/TreeNode/: TreeNode.hpp
include/: README.md
include/Collisions/: Boundary.hpp  Collisions.hpp  CubeBoundary.hpp  README.md  SphereBoundary.hpp
include/Functions/: EulerDiscretizer.hpp  Functions.hpp
include/System/: System.hpp
include/TreeNode/: TreeNode.hpp
src/Collisions/: Collisions.cpp  CubeBoundary.cpp  SphereBoundary.cpp
src/Exporter/: Exporter.cpp
src/Functions/: EulerDiscretizer.cpp  Functions.cpp  Functions.hpp  RKDiscretizer.cpp  VerletDiscretizer.cpp
src/ParallelSystem/: ParallelSystem.cpp
src/Particle/: EMParticle.cpp  EMParticle.hpp  GravParticle.cpp  GravParticle.hpp  Particle.cpp  Particle.hpp  ParticleVerlet.cpp
src/System/: System.cpp  System.hpp
src/TreeNode/: TreeNode.cpp
tests/benchmarks/: Makefile  README.md  benchmark.cpp  test
utilities/Parser/: Parser.hpp  main.cpp
